Fixed formula to align tasks on the map'

--- a/src/scss/components/_Map.scss
+++ b/src/scss/components/_Map.scss
@@ -36,9 +36,7 @@ $grid-width: 2px;
       position: absolute;
       width: 25px;
       height: 25px;
-      transform: translate(-50%, -50%);
       border: 1px solid black;
-      border-radius: 50%;
       background: purple;
     }
   }
