--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -146,10 +146,7 @@ input {
   position: absolute;
   width: 25px;
   height: 25px;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
   border: 1px solid black;
-  border-radius: 50%;
   background: purple;
 }
 
